--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,204 @@
 * {
-    margin: 0;
+    margin: 0; 
     padding: 0;
-    font-family: poppins;
+    font-family: arial, sans-serif;
+}
+
+$main-color: #202124;
+$main-border: 1px solid #dadce0;;
+$lite-bg: #f2f2f2;
+a {
+    text-decoration: none;
+    color: rgba(0,0,0,0.87);
+    font-size: 16px;
+    line-height: 24px;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+button {
+    cursor: pointer;
+}
+li {
+    list-style: none;
+    margin: 0 .7rem;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+img {
+    width: 30px;
+    height: 30px;
 }
 
 body {
+    color: $main-color;
+    width: 100vw;
+    height: 100vh;
     background-color: #FFFFFF;
+    overflow: hidden;
+
+    .wrapper {
+        display: grid;
+        grid-template-columns: 12;
+        grid-row: 4;
+        
+        nav {
+            color: rgba(0,0,0,0.87);
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding: 1rem;
+            width: 100%;
+            height: initial;
+
+            ul {
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+                margin-right: 3rem;
+
+                li {
+                    a {
+                        font-size: 14px;
+                    }
+                    a{
+                        
+                        img.google-app {
+                            width: 30px;
+                            height: 30px;
+                        }
+
+                        img.github {
+                            width: 30px;
+                            height: 30px;
+                            border-radius: 20px;
+                        }
+                    }   
+                }
+            }
+        }
+
+        main {
+            position: relative;
+            width: 45vw;
+            height: 400px;
+            min-width: 500px;
+            margin: 0 auto;
+            margin-top: 7vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            
+            .google {
+                width: 310px;
+                height: 100px;
+                margin-bottom: 1.2rem;
+            }
+
+            .input-wrapper {
+                margin-bottom: 3.2rem;
+                width: 40%;
+                min-width: 500px;
+                position: relative;
+
+                input {
+                    position: absolute;
+                    left: -1.5rem;
+                    width: 100%;
+                    padding: .6rem;
+                    border: 1px solid #dfe1e5;
+                    border-radius: 24px;
+                    margin: 0 auto;
+                    padding-left: 2.5rem;
+                    z-index: 100;
+                    transition:box-shadow .1s ease;
+
+                    &:hover {
+                        box-shadow: 0px 1px 6px rgba(32, 33, 36, .28);
+                    }
+                }
+
+                .search-icon-wrapper {
+                    position: relative;
+                    top: 14px;
+                    left: -15px;
+                    z-index: 1000;
+
+                    a.search-icon img {
+                        width: 22px;
+                        height: 22px;
+                    }
+                
+                }
+
+                .buttons-wrapper {
+                    margin: 1.5rem;
+                    text-align: center;
+
+                    button {
+                        font-size: 16px;
+                        color: #3c4043;
+                        border: 1px solid #f8f9fa;
+                        padding: .5rem;
+                        margin: 0 .2rem;
+                        background-color: #f8f9fa;
+                        border-radius: 5px;
+                        transition: all .1s ease;
+
+                        &:hover {
+                            border: 1px solid #70757a49;
+                        }
+                    }
+                }
+
+                p.language {
+                    text-align: center;
+
+                    a { 
+                        padding: .4rem;
+                        font-size: 18px;
+                        color: #1a0dab;
+                    }
+                }
+            }
+        }
+
+        footer {
+            background-color: $lite-bg;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 90px;
+            border: 1px solid #dadce0;
+            
+            .country {
+                border-bottom: 1px solid #dadce0;
+                padding: .65rem 1.6rem;
+
+                p {
+                    font-size: 16px;
+                    color:#70757a;
+                }
+            }
+
+            a { color: #70757a;
+                padding: .5rem;
+                font-size: 15px;
+            } 
+            .bottom-nav {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding: .5rem 1rem;
+
+            }
+        }
+    }
 }
